# jupyterlab-comfyui-cockpit

./: .env.example  .gitignore  AGENTS.md  README.md  install.json  package.json  pyproject.toml
.github/workflows/: release.yml
jupyter-config/: server-config.json
jupyterlab_comfyui_cockpit/: __init__.py  config.py
jupyterlab_comfyui_cockpit/handlers/: __init__.py  process.py  socket.py  version.py
jupyterlab_comfyui_cockpit/handlers/_dummy/: __init__.py  dummy_process.py
src/: handler.ts  index.ts  theme-provider.tsx  widget.tsx
src/components/common/: TabPanel.tsx
src/features/process/: ProcessPanel.tsx  ProcessStatusArea.tsx
src/features/workflow/: WorkflowPanel.tsx
src/hooks/: useComfySocket.ts  useProcess.ts  useVersion.ts
src/style/: base.css
tests/: test_dummy_process_state.py
